# KriegspielChess

./: Board.cpp  Board.h  CMakeLists.txt  Engine.cpp  Engine.h  Figures.h  Game.h  Utility.h  main.cpp
Figures/: Bishop.cpp  Bishop.h  Figure.cpp  Figure.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
